--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
     <title>Title</title>
 </head>
 
@@ -27,6 +27,7 @@
         <th>内容</th>
         <th>期限</th>
         <th>重要度</th>
+        <th class="header-delete">削除</th>
     </tr>
     <form method="post">
         <tr th:each="issue:${issueList}">
@@ -35,6 +36,7 @@
             <td th:text="${issue.getContent()}"></td>
             <td th:text="${issue.getPeriod()}"></td>
             <td th:text="${issue.getImportance()}"></td>
+            <td><button type="submit" th:formaction="@{/issues/{id}/delete(id=${issue.getId()})}">削除</button></td>
         </tr>
     </form>
 </table>
